fixed gap

--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ hr {
 .course-column {
   flex: 1;
   list-style-type: disc;
-  padding-left: 50px;
+  padding-left: 30px;
   text-align: left; 
 }
 
